# skunk_chess_bot

./: .gitignore  CMakeCache.txt  Makefile  README.md  Skunk  board.cpp  board.h  board.js  cmake_install.cmake  engine.js  index.html  main.cpp  montecarlo.js  piece_tables.h  run_perft.sh  sketch.js  universal-chess-interface-uci-commands.md
objects/: bishop.js  king.js  knight.js  move.js  pawn.js  piece.js  queen.js  rook.js  tile.js  variables.js
skunk/: .gitignore  BitBot  CMakeCache.txt  CMakeLists.txt  Makefile  board.cpp  board.h  cmake_install.cmake  main.cpp  masks.h  piece_tables.h
skunk/analysis/: study.fdb_latexmk  study.fls  study.tex
